tests/instantiating/invalid/atomic_property_invalid_type/bus.fbd
main bus
	foo config
		atomic = 0
